// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DatetimeText > renders without error 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _mt-t-space-spa1360334080"
      style="opacity: 1;"
    >
      <input
        autocapitalize="sentences"
        autocomplete="on"
        autocorrect="on"
        class="css-textinput-11aywtz r-placeholderTextColor-6taxm2 r-padding-t60dpp"
        dir="auto"
        readonly=""
        rows="1"
        spellcheck="true"
        style="font-family: var(--f-family); font-weight: var(--f-weight-book); line-height: var(--f-lineHeight-small);"
        value="Thursday, November 1st, 2023"
        virtualkeyboardpolicy="auto"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PriceText > renders loading state 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row"
      data-testid="price-text"
    >
      <input
        autocapitalize="sentences"
        autocomplete="on"
        autocorrect="on"
        class="css-textinput-11aywtz r-placeholderTextColor-6taxm2 r-padding-t60dpp"
        data-testid="wholePart"
        dir="auto"
        readonly=""
        rows="1"
        spellcheck="true"
        style="font-family: var(--f-family); font-weight: var(--f-weight-book); line-height: var(--f-lineHeight-large); color: rgb(19, 19, 19); font-size: 0px;"
        value="-"
        virtualkeyboardpolicy="auto"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PriceText > renders without error 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row"
      data-testid="price-text"
    >
      <input
        autocapitalize="sentences"
        autocomplete="on"
        autocorrect="on"
        class="css-textinput-11aywtz r-placeholderTextColor-6taxm2 r-padding-t60dpp"
        data-testid="wholePart"
        dir="auto"
        readonly=""
        rows="1"
        spellcheck="true"
        style="font-family: var(--f-family); font-weight: var(--f-weight-book); line-height: var(--f-lineHeight-large); color: rgb(19, 19, 19); font-size: 0px;"
        value="$55"
        virtualkeyboardpolicy="auto"
      />
      <input
        autocapitalize="sentences"
        autocomplete="on"
        autocorrect="on"
        class="css-textinput-11aywtz r-placeholderTextColor-6taxm2 r-padding-t60dpp"
        data-testid="decimalPart"
        dir="auto"
        readonly=""
        rows="1"
        spellcheck="true"
        style="font-family: var(--f-family); font-weight: var(--f-weight-book); line-height: var(--f-lineHeight-large); color: rgba(19, 19, 19, 0.35); font-size: 0px;"
        value=".00"
        virtualkeyboardpolicy="auto"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PriceText > renders without error less than a dollar 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row"
      data-testid="price-text"
    >
      <input
        autocapitalize="sentences"
        autocomplete="on"
        autocorrect="on"
        class="css-textinput-11aywtz r-placeholderTextColor-6taxm2 r-padding-t60dpp"
        data-testid="wholePart"
        dir="auto"
        readonly=""
        rows="1"
        spellcheck="true"
        style="font-family: var(--f-family); font-weight: var(--f-weight-book); line-height: var(--f-lineHeight-large); color: rgb(19, 19, 19); font-size: 0px;"
        value="$0"
        virtualkeyboardpolicy="auto"
      />
      <input
        autocapitalize="sentences"
        autocomplete="on"
        autocorrect="on"
        class="css-textinput-11aywtz r-placeholderTextColor-6taxm2 r-padding-t60dpp"
        data-testid="decimalPart"
        dir="auto"
        readonly=""
        rows="1"
        spellcheck="true"
        style="font-family: var(--f-family); font-weight: var(--f-weight-book); line-height: var(--f-lineHeight-large); color: rgba(19, 19, 19, 0.35); font-size: 0px;"
        value=".0500"
        virtualkeyboardpolicy="auto"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`RelativeChangeText > renders loading state 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa94665587 _mt-t-space-spa94665587"
      data-testid="relative-price-change"
    >
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center"
        data-testid="text-placeholder"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _position-relative"
        >
          <div
            class="css-view-175oi2r"
          >
            <span
              class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-transparent _fontFamily-f-family _wordWrap-break-word _opacity-0 _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
              data-disable-theme="true"
            >
              00.00%
            </span>
          </div>
          <div
            class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-surface2 _borderTopLeftRadius-t-radius-ro1041013639 _borderTopRightRadius-t-radius-ro1041013639 _borderBottomRightRadius-t-radius-ro1041013639 _borderBottomLeftRadius-t-radius-ro1041013639 _bottom-537 _left-0px _position-absolute _right-0px _top-537"
          />
        </div>
      </div>
      <div
        style="opacity: 0;"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa94665587"
        >
          <div
            fill="none"
            stroke-width="2"
            style="width: 16px; height: 16px;"
            viewbox="0 0 24 24"
          >
            <div
              d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
              fill="currentColor"
            />
          </div>
          <input
            autocapitalize="sentences"
            autocomplete="on"
            autocorrect="on"
            class="css-textinput-11aywtz r-placeholderTextColor-6taxm2 r-padding-t60dpp"
            data-testid="relative-change-text"
            dir="auto"
            readonly=""
            rows="1"
            spellcheck="true"
            style="font-family: var(--f-family); font-weight: var(--f-weight-book); line-height: var(--f-lineHeight-large);"
            value="10.00%"
            virtualkeyboardpolicy="auto"
          />
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`RelativeChangeText > renders without error 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa94665587 _mt-t-space-spa94665587"
      data-testid="relative-price-change"
    >
      <div
        style="opacity: 0;"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa94665587"
        >
          <div
            fill="none"
            stroke-width="2"
            style="width: 16px; height: 16px;"
            viewbox="0 0 24 24"
          >
            <div
              d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
              fill="currentColor"
            />
          </div>
          <input
            autocapitalize="sentences"
            autocomplete="on"
            autocorrect="on"
            class="css-textinput-11aywtz r-placeholderTextColor-6taxm2 r-padding-t60dpp"
            data-testid="relative-change-text"
            dir="auto"
            readonly=""
            rows="1"
            spellcheck="true"
            style="font-family: var(--f-family); font-weight: var(--f-weight-book); line-height: var(--f-lineHeight-large);"
            value="10.00%"
            virtualkeyboardpolicy="auto"
          />
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;
